--- a/index.Rmd
+++ b/index.Rmd
@@ -4,6 +4,6 @@ output:
     html_document
 ---
 
-Welcome! I am a rising fourth year Data Science Specialist student at the University of Toronto. I am interested in statistical and computational approaches to a variety of topics in human biology, medicine, and public health. Currently I am rather mediocre and my experience is quite limited (rip) but I am trying my best to change that. Uh, while also struggling to survive.
+Welcome! I am a rising fourth year Data Science Specialist student at the University of Toronto. I am interested in statistical and computational approaches to a variety of topics in human biology, medicine, and public health. Currently I am rather mediocre and my experience is quite limited (rip) but I am trying my best to change that. While also struggling with, uh, everything.
 
 Thank you for visiting, and have a nice day / night!
